--- a/src/blocks/profile/__edit-button/profile__edit-button.css
+++ b/src/blocks/profile/__edit-button/profile__edit-button.css
@@ -18,8 +18,6 @@
 
 @media screen and (max-width: 1023px) {
   .profile__edit-button {
-    width: 18px;
-    height: 18px;
     margin: 0 0 0 1px;
     align-self: center;
   }
